--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">
+      <a href="/" style="padding-top: 6px;" class="navbar-brand">
         TonyLove
       </a>
     </div>
