--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
 
     <nav class="down-pimaxvr">
-        <div style="line-height: 50px;"><span><a href="" target="_blank" title="官网下载">官网下载（不推荐）</a></span></div>
+        <div style="line-height: 50px;"><span><a href="http://bbs.pimaxvr.com/download/Setup.rar" target="_blank" title="官网下载">官网下载<span style="color:red;font-size:12px;">（不推荐）</span></a></span></div>
     </nav>
 
     <nav class="down-360">
