--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 
     <nav class="down-360">
-        <div style="line-height: 50px;"><span><a href="https://a64896.link.eyun.360.cn/lk/surl_yJDm7Tcy7PV" target="_blank" title="360网盘下载">360网盘下载</a></span></div>
+        <div style="line-height: 50px;"><span><a href="https://eyun.360.cn/surl_yJIhwavZ9Ah" target="_blank" title="360网盘下载">360网盘下载</a></span></div>
     </nav>
 
     <nav class="down-baidu">
