--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     </nav>
 
     <nav class="down-360">
-        <div style="line-height: 50px;"><span><a href="https://eyun.360.cn/surl_yZKwe7Si8yI" target="_blank" title="360网盘下载">360网盘下载</a></span></div>
+        <div style="line-height: 50px;"><span><a href="https://eyun.360.cn/surl_yZKLPnJaYWq" target="_blank" title="360网盘下载">360网盘下载</a></span></div>
     </nav>
 
     <nav class="down-baidu">
-        <div style="line-height: 50px;"><span><a href="http://pan.baidu.com/s/1pLvz3Gf" target="_blank" title="百度网盘下载地址">百度网盘下载地址</a></span></div>
+        <div style="line-height: 50px;"><span><a href="http://pan.baidu.com/s/1eSxKGNo" target="_blank" title="百度网盘下载地址">百度网盘下载地址</a></span></div>
     </nav>
     <nav class="down-baidu">
         <div style="line-height: 50px;"><span><a href="https://dl.dpcpfw.com/download/Piplay_1@854004.exe" target="_blank" title="华军下载站地址">华军下载站地址</a></span></div>
