--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 
     <nav class="down-baidu">
-        <div style="line-height: 50px;"><span><a href="http://pan.baidu.com/s/1eSxKGNo" target="_blank" title="百度网盘下载地址">百度网盘下载地址</a></span></div>
+        <div style="line-height: 50px;"><span><a href="http://pan.baidu.com/s/1hsj4PYc" target="_blank" title="百度网盘下载地址">百度网盘下载地址</a></span></div>
     </nav>
 </body>
 </html>
