--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 
     <nav class="down-360">
-        <div style="line-height: 50px;"><span><a href="https://eyun.360.cn/surl_yZSxqXf5BAM" target="_blank" title="360网盘下载">360网盘下载</a></span></div>
+        <div style="line-height: 50px;"><span><a href="https://eyun.360.cn/surl_yZ8ubzvGapy" target="_blank" title="360网盘下载">360网盘下载</a></span></div>
     </nav>
 
     <nav class="down-baidu">
