--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="col-md-12" style="padding: 0;text-align: center;">
-        <div class="col-md-5 col-md-offset-1" id="use-version" style="margin-right: 1em;">
+        <div class="col-md-6 col-md-offset-3" id="use-version" style="margin-right: 1em;">
             <div class="col-md-12">
                 <span>Piplay正式版</span>
             </div>
@@ -21,13 +21,10 @@
                 <a href="http://piplay.pimaxvr.com/piSetup_1.2.68.rar" target="_blank" title="本地下载">本地下载</a>
             </div>
             <div class="col-md-12">
-                <a href="https://eyun.360.cn/surl_yZ8ubzvGapy" target="_blank" title="360网盘下载">360网盘下载</a>
-            </div>
-            <div class="col-md-12">
                 <a href="http://pan.baidu.com/s/1hsj4PYc" target="_blank" title="百度网盘下载地址">百度网盘下载</a>
             </div>
         </div>
-        <div class="col-md-5" id="beta-version">
+        <div class="col-md-5" id="beta-version" style="display:none;">
             <div class="col-md-12">
                 <span>Beta测试版</span>
             </div>
@@ -36,9 +33,6 @@
             </div>
             <div class="col-md-12">
                 <a>本地下载</a>
-            </div>
-            <div class="col-md-12">
-                <a>360网盘下载</a>
             </div>
             <div class="col-md-12">
                 <a>百度网盘下载</a>
