--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span>版本号1.2.68</span>
             </div>
             <div class="col-md-12">
-                <a href="http://piplay.pimaxvr.com/piSetup_1.2.68.rar" target="_blank" title="本地下载">本地下载</a>
+                <a href="http://piplay.pimaxvr.com/PiSetup_1.2.75_cn.exe" target="_blank" title="本地下载">本地下载</a>
             </div>
             <div class="col-md-12">
                 <a href="http://pan.baidu.com/s/1hsj4PYc" target="_blank" title="百度网盘下载地址">百度网盘下载</a>
