--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="http://piplay.pimaxvr.com/PiSetup_1.2.75_cn.exe" target="_blank" title="本地下载">本地下载</a>
             </div>
             <div class="col-md-12">
-                <a href="http://pan.baidu.com/s/1hsj4PYc" target="_blank" title="百度网盘下载地址">百度网盘下载</a>
+                <a href="http://pan.baidu.com/s/1gf46GFp" target="_blank" title="百度网盘下载地址">百度网盘下载</a>
             </div>
         </div>
         <div class="col-md-5" id="beta-version" style="display:none;">
