--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="col-md-12" style="padding: 0;text-align: center;">
         <div class="col-md-6 col-md-offset-3" id="use-version" style="margin-right: 1em;">
             <div class="col-md-12">
-                <span>Piplay正式版</span>
+                <span>PiPlay正式版</span>
             </div>
             <div class="col-md-12">
-                <span>版本号1.2.68</span>
+                <span>版本号1.2.75</span>
             </div>
             <div class="col-md-12">
                 <a href="http://piplay.pimaxvr.com/PiSetup_1.2.75_cn.exe" target="_blank" title="本地下载">本地下载</a>
